<resources>
    <string name="app_name">HW5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="putin">Putin</string>
    <string name="lukashenko">Lukashenko</string>
    <string name="nazarbayev">Nazarbayev</string>
    <string name="vladimir">Vladimir</string>
    <string name="nursultan">Nursultan</string>
    <string name="alexander">Alexander</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone">Phone</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
</resources>