<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ContactListFragment">

    <TextView
        android:id="@+id/contactN1TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DCD9D9"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/vladimir"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/contactN2TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/alexander"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/contactN3TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/nursultan"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="30sp" />

</LinearLayout>